--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <section>
         <h1>Task Tracker</h1>
+        <p class='info'>(Click a task to mark it as finished)</p>
         <div class="top-container">
             <input type="text" class="user-input" placeholder="Enter a task">
             <div class="popup">
